--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">drawing-board-rma</string>
+    <string name="app_name">DrawingApp</string>
+    <string name="drawing">Drawing</string>
+    <string name="profile">Profile</string>
+    <string name="gallery">Gallery</string>
 </resources>
